--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: Beacon-Lights-of-History-Volume-3-part-2-Renaissance-and-Reformation_1499
+_version: 0.1.0
 creator:
   author:
     agent_name: Lord, John
