--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Beacon-Lights-of-History-Volume-3-part-2-Renaissance-and-Reformation_1499
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D'
 - !lcsh 'History'
+- GITenberg
 title: 'Beacon Lights of History, Volume 3 part 2: Renaissance and Reformation'
 url: http://www.gutenberg.org/ebooks/1499
